add designsystem.html, fix electron chat badge count not refreshing
1.8.7 (3)

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" data-wf-page="5c04bdeb75e85aedb5cfc5a5" data-wf-site="5a87de50d9716c0001a3e6bd">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" name="color-scheme" content="light dark">
   <title>Restvo</title>
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
