add google tag to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,15 @@
   <link href="https://tiles.unwiredmaps.com/v2/js/unwired-gl.css?v=0.1.6" rel="stylesheet"/>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RH29HSF125"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RH29HSF125');
+  </script>
 </head>
 <body>
   <app-root></app-root>
